# water_jug_riddle

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  core.py  docker-compose.yml  enums.py  exceptions.py  pyproject.toml  requirements.txt
app/: cli.py  server.py
app/core/: board.py  checker.py  communicator.py  solver.py
app/core/models/: communicator.py
app/core/utils/: exceptions.py
backend/: .pre-commit-config.yaml  Dockerfile  Makefile
backend/app/: api_texts.py  cli.py  server.py
backend/app/core/: board.py  checker.py
backend/app/core/utils/: exceptions.py
backend/tests/unit/: test_main.py
tests/integration/: test_api.py  test_main.py
tests/unit/: test_board.py  test_checker.py
